[metadata]
name = pysts
version = 0.0.1
author = Mark Benson
author_email = mark.benson@nih.gov
maintainer = Mark Jensen
maintainer_email = mark.jensen@nih.gov
description = Bento Simple Terminology Server
url = https://github.com/CBIIT/bento-sts
project_urls =
    Bug Tracker = https:/github.com/CBIIT/bento-sts/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License

[options]
    package_dir =
        = app
    packages = find:
    python_requires = >=3.8
    install_requires =
        Flask-WTF>=0.14.3
	Flask_Paginate>=2021.10.29
        guess-language-spirit>=0.5.3
        idna>=2.6
        itsdangerous>=0.24
        Jinja2>=2.11.3
        Mako>=1.0.7
        MarkupSafe>=1.1.1
        neo4j>=4.1
        python-dateutil>=2.6.1
        python-dotenv>=0.15.0
        python-editor>=1.0.3
        pytz>=2017.2
        PyYAML>=5.4.1
        requests>=2.20.0
        six>=1.15.0
        urllib3>=1.26.5
        visitor>=0.1.3
        Werkzeug>=1.0.1
        WTForms>=2.1
        WTForms-Components>=0.10.5

[options.packages.find]
where = app

