[project]
name = "bento-sts"
version = "0.1.18"
authors = [
	{ name = "Mark Benson", email = "mark.benson@nih.gov" },
	{ name = "Mark A. Jensen", email = "mark.jensen@nih.gov" },
	{ name = "Nelson W Moore", email = "nelson.moore@essential-soft.com" },
]
maintainers = [{ name = "Mark A. Jensen", email = "mark.jensen@nih.gov" }]
description = "Bento Simple Terminology Server"
requires-python = ">=3.10"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: Apache Software License",
]
[project.urls]
"Homepage" = "https://github.com/CBIIT/bento-sts"
"Bug Tracker" = "https:/github.com/CBIIT/bento-sts/issues"

[tool.poetry]
name = "bento-sts"
version = "0.1.18"
description = "Bento Simple Terminology Server"
authors = [
	"Mark Benson <mark.benson@nih.gov>",
	"Mark A. Jensen <mark.jensen@nih.gov>",
]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "bento_sts", from = "src" }]
repository = "https://github.com/CBIIT/bento-sts"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
bento-meta = "^0.2.16"
importlib_resources = ">=5.4.0"
Flask-WTF = ">=0.14.3"
Bootstrap-Flask = ">=1.5.2"
Flask-Moment = ">=0.5.2"
Flask-Paginate = ">=2021.10.29"
guess-language-spirit = ">=0.5.3"
gunicorn = ">=20.1.0"
idna = ">=2.6"
itsdangerous = ">=0.24"
Jinja2 = ">=2.11.3"
MarkupSafe = ">=1.1.1"
neo4j = ">=4.1"
pytest = ">=8.0.0"
pytest-docker = ">=3.1.1"
python-dateutil = ">=2.6.1"
python-dotenv = ">=0.15.0"
python-editor = ">=1.0.3"
pytz = ">=2017.2"
PyYAML = ">=5.4.1"
requests = ">=2.32.4"
six = ">=1.15.0"
urllib3 = "^2.5.0"
visitor = ">=0.1.3"
Werkzeug = "==3.0.6"
WTForms = ">=2.1"
WTForms-Components = ">=0.10.5"
flask-testing = "^0.8.1"
jsonschema = "<4.11.0"
flask = "^2.3.2"
pytest-flask = "^1.3.0"
pytest-mock = "^3.14.0"
tornado = "^6.5.1"
setuptools = "^80.9.0"
certifi = "^2025.4.26"
cryptography = "^45.0.3"
mako = "^1.3.10"
babel = "^2.17.0"
tomli = {version = ">=2.0.1", markers = "python_version < \"3.11\""}

[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "master"
changelog_file = "CHANGELOG.md"
build_command = "poetry build"
dist_path = "dist/"
upload_to_release = true
upload_to_pypi = false
remove_dist = false
patch_without_tag = true
major_on_zero = false                       # while major version on 0.y.z, won't bump to 1.0.0
version_source = "tag"                      # temp?
